--- a/requirements.txt
+++ b/requirements.txt
@@ -1,146 +1,2 @@
-absl-py==0.11.0
-amqp==2.6.0
-appdirs==1.4.4
-apt-xapian-index==0.49
-asgiref==3.2.10
-astunparse==1.6.3
-autopep8==1.5.5
-billiard==3.6.3.0
-blinker==1.4
-cachetools==4.2.1
-celery==4.4.6
-certifi==2019.11.28
-chardet==3.0.4
-chess==1.6.1
-Click==7.0
-colorama==0.4.3
-command-not-found==0.3
-cryptography==2.8
-cupshelpers==1.0
-cycler==0.10.0
-dbus-python==1.2.16
-distlib==0.3.1
-distro==1.4.0
-distro-info===0.23ubuntu1
 Django==3.0.8
-django-audiofield==0.10.0
-django-celery==3.3.1
-django-froala-editor==3.1.0
-django-multiupload==0.5.2
-django-tinymce==3.0.2
-entrypoints==0.3
-filelock==3.0.12
-Flask==1.1.2
-Flask-Login==0.5.0
-Flask-SQLAlchemy==2.5.1
-flatbuffers==1.12
-future==0.18.2
-gast==0.3.3
-google-auth==1.26.1
-google-auth-oauthlib==0.4.2
-google-pasta==0.2.0
-googlemaps==4.4.2
-gpg===1.13.1-unknown
-greenlet==1.0.0
-grpcio==1.32.0
-gunicorn==20.0.4
-h5py==2.10.0
-httplib2==0.14.0
-idna==2.8
-itsdangerous==1.1.0
-Jinja2==2.11.3
-joblib==1.0.0
-Keras==2.4.3
-Keras-Preprocessing==1.1.2
-keyring==18.0.1
-kiwisolver==1.3.1
-kombu==4.6.11
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lxml==4.6.3
-Markdown==3.2.2
-MarkupSafe==1.1.1
-martor==1.4.9
-matplotlib==3.3.4
-multitasking==0.0.9
-netifaces==0.10.4
-nltk==3.5
-numpy==1.19.3
-oauthlib==3.1.0
-olefile==0.46
-opt-einsum==3.3.0
-pandas==1.2.4
-pbr==5.5.1
-pexpect==4.6.0
-Pillow==7.0.0
-plumbum==1.6.9
-protobuf==3.14.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyBluez==0.22
-pycairo==1.16.2
-pycodestyle==2.7.0
-pycrypto==2.6.1
-pycryptodomex==3.6.1
-pycups==1.9.73
-Pygments==2.3.1
-PyGObject==3.36.0
-PyJWT==1.7.1
-pyparsing==2.4.7
-PyQt5==5.14.1
-python-apt==2.0.0+ubuntu0.20.4.5
-python-dateutil==2.8.1
-python-debian===0.1.36ubuntu1
-pytz==2020.1
-pyusb==1.1.0
-pyxattr==0.6.1
-PyYAML==5.3.1
-regex==2020.11.13
-reportlab==3.5.34
-requests==2.22.0
-requests-oauthlib==1.3.0
-requests-unixsocket==0.2.0
-rpyc==4.1.5
-rsa==4.7
-scikit-learn==0.24.0
-scipy==1.6.0
-SecretStorage==2.3.1
-selenium==3.141.0
-simplejson==3.16.0
-sip==4.19.21
-six==1.15.0
-sklearn==0.0
-speedtest-cli==2.1.2
-SQLAlchemy==1.4.2
-sqlparse==0.3.1
-ssh-import-id==5.10
-systemd-python==234
-tensorboard==2.4.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.4.1
-tensorflow-estimator==2.4.0
-termcolor==1.1.0
-testresources==2.0.1
-threadpoolctl==2.1.0
-toml==0.10.2
-torch==1.7.1+cpu
-torchaudio==0.7.2
-torchvision==0.8.2+cpu
-tqdm==4.56.2
-typing-extensions==3.7.4.3
-ubuntu-advantage-tools==27.2
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-usb-creator==0.3.7
-vine==1.3.0
-virtualenv==20.0.30
-wadllib==1.3.3
-Werkzeug==1.0.1
-wrapt==1.12.1
-xkit==0.0.0
-yfinance==0.1.63
-youtube-dl==2020.3.24
+django_audiofield==0.10.0
