--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,27 @@
-Django==3.0.8
-django_audiofield==0.10.0
+amqp==5.0.6
+asgiref==3.4.1
+billiard==3.6.4.0
+celery==5.1.2
+certifi==2021.5.30
+charset-normalizer==2.0.6
+click==7.1.2
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+Django==3.2.9
+django-audiofield==0.10.0
+django-celery==3.1.17
+django-froala-editor==3.2.2
+django-tinymce==3.3.0
+idna==3.2
+kombu==5.1.0
+Markdown==3.3.4
+martor==1.6.4
+prompt-toolkit==3.0.20
+pytz==2021.1
+requests==2.26.0
+six==1.16.0
+sqlparse==0.4.2
+urllib3==1.26.7
+vine==5.0.0
+wcwidth==0.2.5
