--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,71 @@
-amqp==5.0.6
-asgiref==3.4.1
-billiard==3.6.4.0
-celery==5.1.2
-certifi==2021.5.30
-charset-normalizer==2.0.6
-click==7.1.2
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.2.0
-Django==3.2.9
-django-audiofield==0.10.0
-django-celery==3.1.17
-django-froala-editor==3.2.2
-django-tinymce==3.3.0
-idna==3.2
-kombu==5.1.0
-Markdown==3.3.4
-martor==1.6.4
-prompt-toolkit==3.0.20
-pytz==2021.1
-requests==2.26.0
-six==1.16.0
-sqlparse==0.4.2
-urllib3==1.26.7
-vine==5.0.0
-wcwidth==0.2.5
+anyjson==0.3.3
+asana_kazoo==2.0.8dev
+asyncssh_unofficial==0.9.2
+azure_storage==0.37.0
+boto3==1.23.3
+botocore==1.26.3
+bpython==0.22.1
+brotli==1.0.9
+cached_property==1.5.2
+case==1.5.3
+cffi==1.15.0
+ConfigParser==5.2.0
+cryptography==37.0.2
+cx_Oracle==8.3.0
+Cython==0.29.30
+Dialog==0.2.0
+dl==0.1.0
+docutils==0.18.1
+greenlet==1.1.2
+gssapi==1.7.3
+HTMLParser==0.0.2
+importlib_resources==5.7.1
+ipaddr==2.2.0
+ipdb==0.13.9
+ipython==8.3.0
+isodate==0.6.1
+itimer==1.0.1
+jnius==1.1.0
+keyring==23.5.0
+lockfile==0.12.2
+lxml==4.8.0
+mock==4.0.3
+mypy_extensions==0.4.3
+MySQL-python==1.2.5
+numpy==1.22.3
+objgraph==3.5.0
+ordereddict==1.1
+pathlib2==2.3.7.post1
+Pillow==9.1.1
+protobuf==3.20.1
+psutil==5.9.0
+psycopg2==2.9.3
+pyArango==2.0.1
+pycouchdb==1.14.2
+pycurl==7.45.1
+pydocumentdb==2.3.5
+pyenchant==3.2.2
+pyfakefs==4.5.6
+pylibmc==1.6.1
+pymemcache==3.5.2
+pymongo==4.1.1
+pyOpenSSL==22.0.0
+pyrabbit==1.1.0
+Pyro4==4.82
+python_memcached==1.59
+pytidylib==0.3.2
+pywatchman==1.4.1
+PyYAML==6.0
+repr==0.3.1
+sets==0.3.2
+simplejson==3.17.6
+softlayer_messaging==1.0.3
+South==1.0.2
+tblib==1.7.0
+tornado==6.1
+typing_extensions==4.2.0
+unicodedata2==14.0.0
+unittest2==1.1.0
+wincertstore==0.2.1
+xmlrpclib==1.0.1
+zstandard==0.17.0
